# CMakeTest

./: .gitpod.yml  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CI.yml
src/hello_world/: CMakeLists.txt  conanfile.txt  hello_world.cpp  test_hello_world.cpp
